--- a/archives/toutiao-search/2024-04-12.md
+++ b/archives/toutiao-search/2024-04-12.md
@@ -1,61 +1,81 @@
 # 2024-04-12
 
-共 302 条
+共 321 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Fri Apr 12 2024 18:00:44 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Fri Apr 12 2024 19:00:43 GMT+0800 (China Standard Time) -->
 1. [中国资本市场迎来第三个“国九条”](https://so.toutiao.com/search?keyword=中国资本市场迎来第三个“国九条”)
-1. [泽连斯基：乌克兰可能遭遇军事失败](https://so.toutiao.com/search?keyword=泽连斯基：乌克兰可能遭遇军事失败)
+1. [技校上百学生被强制送厂 官方回应](https://so.toutiao.com/search?keyword=技校上百学生被强制送厂+官方回应)
 1. [春天里的民族文化“盛宴”](https://so.toutiao.com/search?keyword=春天里的民族文化“盛宴”)
 1. [网红杨立新及其母亲遇害 嫌犯已抓获](https://so.toutiao.com/search?keyword=网红杨立新及其母亲遇害+嫌犯已抓获)
-1. [第三个“国九条”会开启A股牛市吗](https://so.toutiao.com/search?keyword=第三个“国九条”会开启A股牛市吗)
-1. [四川雅安一河道现大熊猫尸体](https://so.toutiao.com/search?keyword=四川雅安一河道现大熊猫尸体)
-1. [美称已联系中国等劝伊朗别打以色列](https://so.toutiao.com/search?keyword=美称已联系中国等劝伊朗别打以色列)
-1. [演员关凌因辅导孩子作业进医院](https://so.toutiao.com/search?keyword=演员关凌因辅导孩子作业进医院)
-1. [洪秀柱：7月将率领近200名台青访陆](https://so.toutiao.com/search?keyword=洪秀柱：7月将率领近200名台青访陆)
-1. [伊朗媒体：要把特拉维夫夷为平地](https://so.toutiao.com/search?keyword=伊朗媒体：要把特拉维夫夷为平地)
-1. [“房闹”又来了](https://so.toutiao.com/search?keyword=“房闹”又来了)
-1. [保安队长性侵女队员背后的临时工之困](https://so.toutiao.com/search?keyword=保安队长性侵女队员背后的临时工之困)
-1. [“滴滴代打”可5折用车？官方辟谣](https://so.toutiao.com/search?keyword=“滴滴代打”可5折用车？官方辟谣)
-1. [问界新M5实车曝光](https://so.toutiao.com/search?keyword=问界新M5实车曝光)
-1. [济南原市长孙述涛贪1.29亿受审](https://so.toutiao.com/search?keyword=济南原市长孙述涛贪1.29亿受审)
-1. [华为P70系列详细参数和价格曝光](https://so.toutiao.com/search?keyword=华为P70系列详细参数和价格曝光)
-1. [保安队长涉嫌多次性侵66岁女队员](https://so.toutiao.com/search?keyword=保安队长涉嫌多次性侵66岁女队员)
-1. [女子母亲去世 舅舅吹唢呐送别](https://so.toutiao.com/search?keyword=女子母亲去世+舅舅吹唢呐送别)
-1. [溺亡大熊猫表面无明显人为伤](https://so.toutiao.com/search?keyword=溺亡大熊猫表面无明显人为伤)
-1. [国防部：绝不会任凭菲方无理取闹](https://so.toutiao.com/search?keyword=国防部：绝不会任凭菲方无理取闹)
-1. [男子花36万买新车空调不能制冷](https://so.toutiao.com/search?keyword=男子花36万买新车空调不能制冷)
-1. [女老师用手端学生下巴挑衅](https://so.toutiao.com/search?keyword=女老师用手端学生下巴挑衅)
-1. [轿车反复碾压女子后疑有逃逸行为](https://so.toutiao.com/search?keyword=轿车反复碾压女子后疑有逃逸行为)
-1. [解放军将迎头痛击“台独”分裂行径](https://so.toutiao.com/search?keyword=解放军将迎头痛击“台独”分裂行径)
-1. [专家谈雅安野生大熊猫溺亡](https://so.toutiao.com/search?keyword=专家谈雅安野生大熊猫溺亡)
-1. [北京银行行长：扩大低成本存款来源](https://so.toutiao.com/search?keyword=北京银行行长：扩大低成本存款来源)
+1. [居民换表后重庆燃气利润暴增824%](https://so.toutiao.com/search?keyword=居民换表后重庆燃气利润暴增824%)
 1. [监拍：男子电梯殴打女子被保安暴揍](https://so.toutiao.com/search?keyword=监拍：男子电梯殴打女子被保安暴揍)
+1. [朋友称杨立新系被徒弟杀害](https://so.toutiao.com/search?keyword=朋友称杨立新系被徒弟杀害)
+1. [泽连斯基：乌克兰可能遭遇军事失败](https://so.toutiao.com/search?keyword=泽连斯基：乌克兰可能遭遇军事失败)
+1. [演员关凌因辅导孩子作业进医院](https://so.toutiao.com/search?keyword=演员关凌因辅导孩子作业进医院)
+1. [伊朗媒体：要把特拉维夫夷为平地](https://so.toutiao.com/search?keyword=伊朗媒体：要把特拉维夫夷为平地)
+1. [保安队长性侵女队员背后的临时工之困](https://so.toutiao.com/search?keyword=保安队长性侵女队员背后的临时工之困)
+1. [解放军将迎头痛击“台独”分裂行径](https://so.toutiao.com/search?keyword=解放军将迎头痛击“台独”分裂行径)
+1. [“滴滴代打”可5折用车？官方辟谣](https://so.toutiao.com/search?keyword=“滴滴代打”可5折用车？官方辟谣)
+1. [美称已联系中国等劝伊朗别打以色列](https://so.toutiao.com/search?keyword=美称已联系中国等劝伊朗别打以色列)
+1. [第三个“国九条”会开启A股牛市吗](https://so.toutiao.com/search?keyword=第三个“国九条”会开启A股牛市吗)
+1. [华为P70系列详细参数和价格曝光](https://so.toutiao.com/search?keyword=华为P70系列详细参数和价格曝光)
+1. [“房闹”又来了](https://so.toutiao.com/search?keyword=“房闹”又来了)
+1. [洪秀柱：7月将率领近200名台青访陆](https://so.toutiao.com/search?keyword=洪秀柱：7月将率领近200名台青访陆)
+1. [越南女首富死刑背后的“烈火熔炉”](https://so.toutiao.com/search?keyword=越南女首富死刑背后的“烈火熔炉”)
+1. [国民党团：赖清德用人小圈圈化](https://so.toutiao.com/search?keyword=国民党团：赖清德用人小圈圈化)
+1. [国防部：绝不会任凭菲方无理取闹](https://so.toutiao.com/search?keyword=国防部：绝不会任凭菲方无理取闹)
+1. [被中方制裁的2家美军火公司啥来头](https://so.toutiao.com/search?keyword=被中方制裁的2家美军火公司啥来头)
+1. [保安队长涉嫌多次性侵66岁女队员](https://so.toutiao.com/search?keyword=保安队长涉嫌多次性侵66岁女队员)
+1. [奇瑞董事长评智界S7：Amazing](https://so.toutiao.com/search?keyword=奇瑞董事长评智界S7：Amazing)
+1. [原来《惜花芷》头饰这么细节](https://so.toutiao.com/search?keyword=原来《惜花芷》头饰这么细节)
+1. [女子母亲去世 舅舅吹唢呐送别](https://so.toutiao.com/search?keyword=女子母亲去世+舅舅吹唢呐送别)
+1. [四川死亡野生大熊猫为成年雌性](https://so.toutiao.com/search?keyword=四川死亡野生大熊猫为成年雌性)
+1. [伊朗对联合国开不惩罚以色列条件](https://so.toutiao.com/search?keyword=伊朗对联合国开不惩罚以色列条件)
+1. [赖岳谦谈中国大陆宣布制裁两家美企](https://so.toutiao.com/search?keyword=赖岳谦谈中国大陆宣布制裁两家美企)
+1. [黄子佼所持未成年影像涉及残忍虐行](https://so.toutiao.com/search?keyword=黄子佼所持未成年影像涉及残忍虐行)
+1. [为手机支架 雷军余承东隔空互嘲](https://so.toutiao.com/search?keyword=为手机支架+雷军余承东隔空互嘲)
+1. [王毅应约同美国务卿布林肯通电话](https://so.toutiao.com/search?keyword=王毅应约同美国务卿布林肯通电话)
+1. [北京银行行长：扩大低成本存款来源](https://so.toutiao.com/search?keyword=北京银行行长：扩大低成本存款来源)
+1. [特警车违停被交警贴罚单](https://so.toutiao.com/search?keyword=特警车违停被交警贴罚单)
+1. [官方通报大熊猫野外死亡：死因正调查](https://so.toutiao.com/search?keyword=官方通报大熊猫野外死亡：死因正调查)
+1. [国务院要求加强对证券基金机构监管](https://so.toutiao.com/search?keyword=国务院要求加强对证券基金机构监管)
+1. [杜特尔特：希望中菲重归于好](https://so.toutiao.com/search?keyword=杜特尔特：希望中菲重归于好)
+1. [外交部亚洲司司长约见日方外交官](https://so.toutiao.com/search?keyword=外交部亚洲司司长约见日方外交官)
+1. [男子花36万买新车空调不能制冷](https://so.toutiao.com/search?keyword=男子花36万买新车空调不能制冷)
+1. [轿车反复碾压女子后疑有逃逸行为](https://so.toutiao.com/search?keyword=轿车反复碾压女子后疑有逃逸行为)
+1. [菲律宾总统车队在白宫外遭抗议](https://so.toutiao.com/search?keyword=菲律宾总统车队在白宫外遭抗议)
+1. [牛犇谈入选感动中国年度人物的感受](https://so.toutiao.com/search?keyword=牛犇谈入选感动中国年度人物的感受)
+1. [调休快把4月调成单休了](https://so.toutiao.com/search?keyword=调休快把4月调成单休了)
+1. [王健林失去万达广场后还剩什么](https://so.toutiao.com/search?keyword=王健林失去万达广场后还剩什么)
+1. [女老师用手端学生下巴挑衅](https://so.toutiao.com/search?keyword=女老师用手端学生下巴挑衅)
+1. [首饰金价直逼740元每克](https://so.toutiao.com/search?keyword=首饰金价直逼740元每克)
+1. [德国总理朔尔茨将访华](https://so.toutiao.com/search?keyword=德国总理朔尔茨将访华)
+1. [淄博烧烤赵大爷的徒弟藏不住了](https://so.toutiao.com/search?keyword=淄博烧烤赵大爷的徒弟藏不住了)
+1. [羽毛球亚锦赛“凡尘”组合晋级4强](https://so.toutiao.com/search?keyword=羽毛球亚锦赛“凡尘”组合晋级4强)
+1. [问界新M5实车曝光](https://so.toutiao.com/search?keyword=问界新M5实车曝光)
+1. [四川雅安一河道现大熊猫尸体](https://so.toutiao.com/search?keyword=四川雅安一河道现大熊猫尸体)
+1. [济南原市长孙述涛贪1.29亿受审](https://so.toutiao.com/search?keyword=济南原市长孙述涛贪1.29亿受审)
+1. [溺亡大熊猫表面无明显人为伤](https://so.toutiao.com/search?keyword=溺亡大熊猫表面无明显人为伤)
+1. [专家谈雅安野生大熊猫溺亡](https://so.toutiao.com/search?keyword=专家谈雅安野生大熊猫溺亡)
 1. [云南人的泼水装备有多离谱](https://so.toutiao.com/search?keyword=云南人的泼水装备有多离谱)
 1. [中国B级轿车整体失守20万元价格线](https://so.toutiao.com/search?keyword=中国B级轿车整体失守20万元价格线)
 1. [男子被狗抓伤没打疫苗发病3天离世](https://so.toutiao.com/search?keyword=男子被狗抓伤没打疫苗发病3天离世)
-1. [调休快把4月调成单休了](https://so.toutiao.com/search?keyword=调休快把4月调成单休了)
 1. [证监会主席谈资本市场第三个国九条](https://so.toutiao.com/search?keyword=证监会主席谈资本市场第三个国九条)
 1. [相恋10年丈夫割一半肝给妻子](https://so.toutiao.com/search?keyword=相恋10年丈夫割一半肝给妻子)
 1. [现货黄金首次升至每盎司2400美元](https://so.toutiao.com/search?keyword=现货黄金首次升至每盎司2400美元)
 1. [女子举报董事长数次性骚扰 公司回应](https://so.toutiao.com/search?keyword=女子举报董事长数次性骚扰+公司回应)
-1. [黄子佼所持未成年影像涉及残忍虐行](https://so.toutiao.com/search?keyword=黄子佼所持未成年影像涉及残忍虐行)
 1. [云南曲靖副市长李金林被查](https://so.toutiao.com/search?keyword=云南曲靖副市长李金林被查)
 1. [台媒体人：台青对大陆制造有新想象](https://so.toutiao.com/search?keyword=台媒体人：台青对大陆制造有新想象)
 1. [高校院长校内被撞身亡 校方通报](https://so.toutiao.com/search?keyword=高校院长校内被撞身亡+校方通报)
-1. [伊朗对联合国开不惩罚以色列条件](https://so.toutiao.com/search?keyword=伊朗对联合国开不惩罚以色列条件)
 1. [南京北站造型被吐槽像卫生巾](https://so.toutiao.com/search?keyword=南京北站造型被吐槽像卫生巾)
-1. [王健林失去万达广场后还剩什么](https://so.toutiao.com/search?keyword=王健林失去万达广场后还剩什么)
-1. [德国总理朔尔茨将访华](https://so.toutiao.com/search?keyword=德国总理朔尔茨将访华)
 1. [麻将馆坍塌2死3伤：涉事房疑为自建房](https://so.toutiao.com/search?keyword=麻将馆坍塌2死3伤：涉事房疑为自建房)
 1. [普京称打击乌能源设施是被迫回应](https://so.toutiao.com/search?keyword=普京称打击乌能源设施是被迫回应)
-1. [被中方制裁的2家美军火公司啥来头](https://so.toutiao.com/search?keyword=被中方制裁的2家美军火公司啥来头)
 1. [多名受害者已成团反击黄子佼](https://so.toutiao.com/search?keyword=多名受害者已成团反击黄子佼)
 1. [外交部：美日拉帮结伙挑战地区和平](https://so.toutiao.com/search?keyword=外交部：美日拉帮结伙挑战地区和平)
 1. [五一调休放5天](https://so.toutiao.com/search?keyword=五一调休放5天)
 1. [钟美美现状：自称过气有钱就挣](https://so.toutiao.com/search?keyword=钟美美现状：自称过气有钱就挣)
 1. [设备更新和以旧换新行动方案](https://so.toutiao.com/search?keyword=设备更新和以旧换新行动方案)
-1. [越南女首富死刑背后的“烈火熔炉”](https://so.toutiao.com/search?keyword=越南女首富死刑背后的“烈火熔炉”)
 1. [陕西33岁民警为保护群众牺牲](https://so.toutiao.com/search?keyword=陕西33岁民警为保护群众牺牲)
 1. [男子3岁被拐31岁被找回 母亲痛哭](https://so.toutiao.com/search?keyword=男子3岁被拐31岁被找回+母亲痛哭)
 1. [辽宁：推行异地任职干部集中居住](https://so.toutiao.com/search?keyword=辽宁：推行异地任职干部集中居住)
@@ -73,7 +93,6 @@
 1. [中国平安净卖出超5亿元](https://so.toutiao.com/search?keyword=中国平安净卖出超5亿元)
 1. [异地任职干部住宿交通标准是什么](https://so.toutiao.com/search?keyword=异地任职干部住宿交通标准是什么)
 1. [女子举报街道办副主任丈夫出轨](https://so.toutiao.com/search?keyword=女子举报街道办副主任丈夫出轨)
-1. [淄博烧烤赵大爷的徒弟藏不住了](https://so.toutiao.com/search?keyword=淄博烧烤赵大爷的徒弟藏不住了)
 1. [伊朗媒体称要把以色列城市夷为平地](https://so.toutiao.com/search?keyword=伊朗媒体称要把以色列城市夷为平地)
 1. [钟美美自曝曾遭受校园暴力](https://so.toutiao.com/search?keyword=钟美美自曝曾遭受校园暴力)
 1. [院士林圣彩：一天没必要吃超过两餐](https://so.toutiao.com/search?keyword=院士林圣彩：一天没必要吃超过两餐)
