--- a/archives/toutiao-search/2024-04-12.md
+++ b/archives/toutiao-search/2024-04-12.md
@@ -1,55 +1,72 @@
 # 2024-04-12
 
-共 321 条
+共 336 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Fri Apr 12 2024 19:00:43 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Fri Apr 12 2024 20:00:46 GMT+0800 (China Standard Time) -->
 1. [中国资本市场迎来第三个“国九条”](https://so.toutiao.com/search?keyword=中国资本市场迎来第三个“国九条”)
 1. [技校上百学生被强制送厂 官方回应](https://so.toutiao.com/search?keyword=技校上百学生被强制送厂+官方回应)
 1. [春天里的民族文化“盛宴”](https://so.toutiao.com/search?keyword=春天里的民族文化“盛宴”)
-1. [网红杨立新及其母亲遇害 嫌犯已抓获](https://so.toutiao.com/search?keyword=网红杨立新及其母亲遇害+嫌犯已抓获)
+1. [警方通报网红杨立新被害：嫌犯被刑拘](https://so.toutiao.com/search?keyword=警方通报网红杨立新被害：嫌犯被刑拘)
 1. [居民换表后重庆燃气利润暴增824%](https://so.toutiao.com/search?keyword=居民换表后重庆燃气利润暴增824%)
-1. [监拍：男子电梯殴打女子被保安暴揍](https://so.toutiao.com/search?keyword=监拍：男子电梯殴打女子被保安暴揍)
-1. [朋友称杨立新系被徒弟杀害](https://so.toutiao.com/search?keyword=朋友称杨立新系被徒弟杀害)
 1. [泽连斯基：乌克兰可能遭遇军事失败](https://so.toutiao.com/search?keyword=泽连斯基：乌克兰可能遭遇军事失败)
-1. [演员关凌因辅导孩子作业进医院](https://so.toutiao.com/search?keyword=演员关凌因辅导孩子作业进医院)
-1. [伊朗媒体：要把特拉维夫夷为平地](https://so.toutiao.com/search?keyword=伊朗媒体：要把特拉维夫夷为平地)
-1. [保安队长性侵女队员背后的临时工之困](https://so.toutiao.com/search?keyword=保安队长性侵女队员背后的临时工之困)
-1. [解放军将迎头痛击“台独”分裂行径](https://so.toutiao.com/search?keyword=解放军将迎头痛击“台独”分裂行径)
-1. [“滴滴代打”可5折用车？官方辟谣](https://so.toutiao.com/search?keyword=“滴滴代打”可5折用车？官方辟谣)
+1. [朋友称杨立新系被徒弟杀害](https://so.toutiao.com/search?keyword=朋友称杨立新系被徒弟杀害)
 1. [美称已联系中国等劝伊朗别打以色列](https://so.toutiao.com/search?keyword=美称已联系中国等劝伊朗别打以色列)
-1. [第三个“国九条”会开启A股牛市吗](https://so.toutiao.com/search?keyword=第三个“国九条”会开启A股牛市吗)
-1. [华为P70系列详细参数和价格曝光](https://so.toutiao.com/search?keyword=华为P70系列详细参数和价格曝光)
-1. [“房闹”又来了](https://so.toutiao.com/search?keyword=“房闹”又来了)
 1. [洪秀柱：7月将率领近200名台青访陆](https://so.toutiao.com/search?keyword=洪秀柱：7月将率领近200名台青访陆)
+1. [华为P70系列详细参数和价格曝光](https://so.toutiao.com/search?keyword=华为P70系列详细参数和价格曝光)
+1. [保安队长性侵女队员背后的临时工之困](https://so.toutiao.com/search?keyword=保安队长性侵女队员背后的临时工之困)
+1. [伊朗媒体：要把特拉维夫夷为平地](https://so.toutiao.com/search?keyword=伊朗媒体：要把特拉维夫夷为平地)
+1. [“滴滴代打”可5折用车？官方辟谣](https://so.toutiao.com/search?keyword=“滴滴代打”可5折用车？官方辟谣)
+1. [监拍：男子电梯殴打女子被保安暴揍](https://so.toutiao.com/search?keyword=监拍：男子电梯殴打女子被保安暴揍)
+1. [解放军将迎头痛击“台独”分裂行径](https://so.toutiao.com/search?keyword=解放军将迎头痛击“台独”分裂行径)
 1. [越南女首富死刑背后的“烈火熔炉”](https://so.toutiao.com/search?keyword=越南女首富死刑背后的“烈火熔炉”)
-1. [国民党团：赖清德用人小圈圈化](https://so.toutiao.com/search?keyword=国民党团：赖清德用人小圈圈化)
-1. [国防部：绝不会任凭菲方无理取闹](https://so.toutiao.com/search?keyword=国防部：绝不会任凭菲方无理取闹)
-1. [被中方制裁的2家美军火公司啥来头](https://so.toutiao.com/search?keyword=被中方制裁的2家美军火公司啥来头)
-1. [保安队长涉嫌多次性侵66岁女队员](https://so.toutiao.com/search?keyword=保安队长涉嫌多次性侵66岁女队员)
-1. [奇瑞董事长评智界S7：Amazing](https://so.toutiao.com/search?keyword=奇瑞董事长评智界S7：Amazing)
-1. [原来《惜花芷》头饰这么细节](https://so.toutiao.com/search?keyword=原来《惜花芷》头饰这么细节)
-1. [女子母亲去世 舅舅吹唢呐送别](https://so.toutiao.com/search?keyword=女子母亲去世+舅舅吹唢呐送别)
-1. [四川死亡野生大熊猫为成年雌性](https://so.toutiao.com/search?keyword=四川死亡野生大熊猫为成年雌性)
-1. [伊朗对联合国开不惩罚以色列条件](https://so.toutiao.com/search?keyword=伊朗对联合国开不惩罚以色列条件)
 1. [赖岳谦谈中国大陆宣布制裁两家美企](https://so.toutiao.com/search?keyword=赖岳谦谈中国大陆宣布制裁两家美企)
-1. [黄子佼所持未成年影像涉及残忍虐行](https://so.toutiao.com/search?keyword=黄子佼所持未成年影像涉及残忍虐行)
-1. [为手机支架 雷军余承东隔空互嘲](https://so.toutiao.com/search?keyword=为手机支架+雷军余承东隔空互嘲)
-1. [王毅应约同美国务卿布林肯通电话](https://so.toutiao.com/search?keyword=王毅应约同美国务卿布林肯通电话)
-1. [北京银行行长：扩大低成本存款来源](https://so.toutiao.com/search?keyword=北京银行行长：扩大低成本存款来源)
+1. [第三个“国九条”会开启A股牛市吗](https://so.toutiao.com/search?keyword=第三个“国九条”会开启A股牛市吗)
+1. [国防部：绝不会任凭菲方无理取闹](https://so.toutiao.com/search?keyword=国防部：绝不会任凭菲方无理取闹)
+1. [中国B级轿车整体失守20万元价格线](https://so.toutiao.com/search?keyword=中国B级轿车整体失守20万元价格线)
+1. [“秦朗丢作业”系摆拍 博主被处罚](https://so.toutiao.com/search?keyword=“秦朗丢作业”系摆拍+博主被处罚)
+1. [四川死亡野生大熊猫为成年雌性](https://so.toutiao.com/search?keyword=四川死亡野生大熊猫为成年雌性)
+1. [“房闹”又来了](https://so.toutiao.com/search?keyword=“房闹”又来了)
+1. [奇瑞董事长评智界S7：Amazing](https://so.toutiao.com/search?keyword=奇瑞董事长评智界S7：Amazing)
+1. [首饰金价直逼740元每克](https://so.toutiao.com/search?keyword=首饰金价直逼740元每克)
 1. [特警车违停被交警贴罚单](https://so.toutiao.com/search?keyword=特警车违停被交警贴罚单)
+1. [演员关凌因辅导孩子作业进医院](https://so.toutiao.com/search?keyword=演员关凌因辅导孩子作业进医院)
+1. [女子母亲去世 舅舅吹唢呐送别](https://so.toutiao.com/search?keyword=女子母亲去世+舅舅吹唢呐送别)
+1. [为手机支架 雷军余承东隔空互嘲](https://so.toutiao.com/search?keyword=为手机支架+雷军余承东隔空互嘲)
+1. [保安队长涉嫌多次性侵66岁女队员](https://so.toutiao.com/search?keyword=保安队长涉嫌多次性侵66岁女队员)
+1. [黄子佼所持未成年影像涉及残忍虐行](https://so.toutiao.com/search?keyword=黄子佼所持未成年影像涉及残忍虐行)
+1. [男子被狗抓伤没打疫苗发病3天离世](https://so.toutiao.com/search?keyword=男子被狗抓伤没打疫苗发病3天离世)
+1. [谁拿到了朔尔茨访华团“登机牌”](https://so.toutiao.com/search?keyword=谁拿到了朔尔茨访华团“登机牌”)
+1. [王毅应约同美国务卿布林肯通电话](https://so.toutiao.com/search?keyword=王毅应约同美国务卿布林肯通电话)
+1. [伊朗对联合国开不惩罚以色列条件](https://so.toutiao.com/search?keyword=伊朗对联合国开不惩罚以色列条件)
+1. [被中方制裁的2家美军火公司啥来头](https://so.toutiao.com/search?keyword=被中方制裁的2家美军火公司啥来头)
+1. [岸田文雄声称今日乌克兰明日东亚](https://so.toutiao.com/search?keyword=岸田文雄声称今日乌克兰明日东亚)
+1. [智界S7充电5分钟续航增加215公里](https://so.toutiao.com/search?keyword=智界S7充电5分钟续航增加215公里)
+1. [俄罗斯警告芬兰：将反制核威胁](https://so.toutiao.com/search?keyword=俄罗斯警告芬兰：将反制核威胁)
+1. [中方介绍王毅应约同布林肯通话情况](https://so.toutiao.com/search?keyword=中方介绍王毅应约同布林肯通话情况)
+1. [洪秀柱谈马英九大陆行](https://so.toutiao.com/search?keyword=洪秀柱谈马英九大陆行)
+1. [U14国少15-2血洗日本大阪樱花梯队](https://so.toutiao.com/search?keyword=U14国少15-2血洗日本大阪樱花梯队)
+1. [女子执意向骗子转账 柜员及时劝阻](https://so.toutiao.com/search?keyword=女子执意向骗子转账+柜员及时劝阻)
+1. [女孩边走边哭 两警察默默陪伴守护](https://so.toutiao.com/search?keyword=女孩边走边哭+两警察默默陪伴守护)
+1. [男子花36万买新车空调不能制冷](https://so.toutiao.com/search?keyword=男子花36万买新车空调不能制冷)
+1. [女老师用手端学生下巴挑衅](https://so.toutiao.com/search?keyword=女老师用手端学生下巴挑衅)
+1. [贪官退休两年后被查哭着鞠躬道歉](https://so.toutiao.com/search?keyword=贪官退休两年后被查哭着鞠躬道歉)
+1. [证监会重点监控异常程序化交易](https://so.toutiao.com/search?keyword=证监会重点监控异常程序化交易)
+1. [学生修坏学校卫生间隔板被索赔](https://so.toutiao.com/search?keyword=学生修坏学校卫生间隔板被索赔)
+1. [中非外长拜波将访华](https://so.toutiao.com/search?keyword=中非外长拜波将访华)
+1. [网红杨立新及其母亲遇害 嫌犯已抓获](https://so.toutiao.com/search?keyword=网红杨立新及其母亲遇害+嫌犯已抓获)
+1. [国民党团：赖清德用人小圈圈化](https://so.toutiao.com/search?keyword=国民党团：赖清德用人小圈圈化)
+1. [原来《惜花芷》头饰这么细节](https://so.toutiao.com/search?keyword=原来《惜花芷》头饰这么细节)
+1. [北京银行行长：扩大低成本存款来源](https://so.toutiao.com/search?keyword=北京银行行长：扩大低成本存款来源)
 1. [官方通报大熊猫野外死亡：死因正调查](https://so.toutiao.com/search?keyword=官方通报大熊猫野外死亡：死因正调查)
 1. [国务院要求加强对证券基金机构监管](https://so.toutiao.com/search?keyword=国务院要求加强对证券基金机构监管)
 1. [杜特尔特：希望中菲重归于好](https://so.toutiao.com/search?keyword=杜特尔特：希望中菲重归于好)
 1. [外交部亚洲司司长约见日方外交官](https://so.toutiao.com/search?keyword=外交部亚洲司司长约见日方外交官)
-1. [男子花36万买新车空调不能制冷](https://so.toutiao.com/search?keyword=男子花36万买新车空调不能制冷)
 1. [轿车反复碾压女子后疑有逃逸行为](https://so.toutiao.com/search?keyword=轿车反复碾压女子后疑有逃逸行为)
 1. [菲律宾总统车队在白宫外遭抗议](https://so.toutiao.com/search?keyword=菲律宾总统车队在白宫外遭抗议)
 1. [牛犇谈入选感动中国年度人物的感受](https://so.toutiao.com/search?keyword=牛犇谈入选感动中国年度人物的感受)
 1. [调休快把4月调成单休了](https://so.toutiao.com/search?keyword=调休快把4月调成单休了)
 1. [王健林失去万达广场后还剩什么](https://so.toutiao.com/search?keyword=王健林失去万达广场后还剩什么)
-1. [女老师用手端学生下巴挑衅](https://so.toutiao.com/search?keyword=女老师用手端学生下巴挑衅)
-1. [首饰金价直逼740元每克](https://so.toutiao.com/search?keyword=首饰金价直逼740元每克)
 1. [德国总理朔尔茨将访华](https://so.toutiao.com/search?keyword=德国总理朔尔茨将访华)
 1. [淄博烧烤赵大爷的徒弟藏不住了](https://so.toutiao.com/search?keyword=淄博烧烤赵大爷的徒弟藏不住了)
 1. [羽毛球亚锦赛“凡尘”组合晋级4强](https://so.toutiao.com/search?keyword=羽毛球亚锦赛“凡尘”组合晋级4强)
@@ -59,8 +76,6 @@
 1. [溺亡大熊猫表面无明显人为伤](https://so.toutiao.com/search?keyword=溺亡大熊猫表面无明显人为伤)
 1. [专家谈雅安野生大熊猫溺亡](https://so.toutiao.com/search?keyword=专家谈雅安野生大熊猫溺亡)
 1. [云南人的泼水装备有多离谱](https://so.toutiao.com/search?keyword=云南人的泼水装备有多离谱)
-1. [中国B级轿车整体失守20万元价格线](https://so.toutiao.com/search?keyword=中国B级轿车整体失守20万元价格线)
-1. [男子被狗抓伤没打疫苗发病3天离世](https://so.toutiao.com/search?keyword=男子被狗抓伤没打疫苗发病3天离世)
 1. [证监会主席谈资本市场第三个国九条](https://so.toutiao.com/search?keyword=证监会主席谈资本市场第三个国九条)
 1. [相恋10年丈夫割一半肝给妻子](https://so.toutiao.com/search?keyword=相恋10年丈夫割一半肝给妻子)
 1. [现货黄金首次升至每盎司2400美元](https://so.toutiao.com/search?keyword=现货黄金首次升至每盎司2400美元)
