--- a/archives/toutiao-search/2024-04-12.md
+++ b/archives/toutiao-search/2024-04-12.md
@@ -1,55 +1,71 @@
 # 2024-04-12
 
-共 347 条
+共 361 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Fri Apr 12 2024 21:01:33 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Fri Apr 12 2024 22:00:59 GMT+0800 (China Standard Time) -->
 1. [中国资本市场迎来第三个“国九条”](https://so.toutiao.com/search?keyword=中国资本市场迎来第三个“国九条”)
 1. [居民换表后重庆燃气利润暴增824%](https://so.toutiao.com/search?keyword=居民换表后重庆燃气利润暴增824%)
-1. [春天里的民族文化“盛宴”](https://so.toutiao.com/search?keyword=春天里的民族文化“盛宴”)
+1. [一季度我国进出口同比增长5％](https://so.toutiao.com/search?keyword=一季度我国进出口同比增长5％)
 1. [警方通报网红杨立新被害：嫌犯被刑拘](https://so.toutiao.com/search?keyword=警方通报网红杨立新被害：嫌犯被刑拘)
 1. [技校上百学生被强制送厂 官方回应](https://so.toutiao.com/search?keyword=技校上百学生被强制送厂+官方回应)
-1. [泽连斯基：乌克兰可能遭遇军事失败](https://so.toutiao.com/search?keyword=泽连斯基：乌克兰可能遭遇军事失败)
+1. [特警车违停被交警贴罚单](https://so.toutiao.com/search?keyword=特警车违停被交警贴罚单)
 1. [朋友称杨立新系被徒弟杀害](https://so.toutiao.com/search?keyword=朋友称杨立新系被徒弟杀害)
 1. [美称已联系中国等劝伊朗别打以色列](https://so.toutiao.com/search?keyword=美称已联系中国等劝伊朗别打以色列)
-1. [孕妇忘记已怀孕9月习惯性翻了个身](https://so.toutiao.com/search?keyword=孕妇忘记已怀孕9月习惯性翻了个身)
-1. [雷军展示小米工厂天台](https://so.toutiao.com/search?keyword=雷军展示小米工厂天台)
-1. [伊朗媒体：要把特拉维夫夷为平地](https://so.toutiao.com/search?keyword=伊朗媒体：要把特拉维夫夷为平地)
-1. [洪秀柱：7月将率领近200名台青访陆](https://so.toutiao.com/search?keyword=洪秀柱：7月将率领近200名台青访陆)
+1. [美国8名劫匪持枪洗劫唐人街珠宝店](https://so.toutiao.com/search?keyword=美国8名劫匪持枪洗劫唐人街珠宝店)
+1. [泽连斯基：乌克兰可能遭遇军事失败](https://so.toutiao.com/search?keyword=泽连斯基：乌克兰可能遭遇军事失败)
+1. [监拍：男子电梯殴打女子被保安暴揍](https://so.toutiao.com/search?keyword=监拍：男子电梯殴打女子被保安暴揍)
+1. [洪秀柱谈马英九大陆行](https://so.toutiao.com/search?keyword=洪秀柱谈马英九大陆行)
 1. [“滴滴代打”可5折用车？官方辟谣](https://so.toutiao.com/search?keyword=“滴滴代打”可5折用车？官方辟谣)
-1. [被中方制裁的2家美军火公司啥来头](https://so.toutiao.com/search?keyword=被中方制裁的2家美军火公司啥来头)
-1. [越南女首富死刑背后的“烈火熔炉”](https://so.toutiao.com/search?keyword=越南女首富死刑背后的“烈火熔炉”)
-1. [岸田文雄声称今日乌克兰明日东亚](https://so.toutiao.com/search?keyword=岸田文雄声称今日乌克兰明日东亚)
-1. [特警车违停被交警贴罚单](https://so.toutiao.com/search?keyword=特警车违停被交警贴罚单)
-1. [保安队长性侵女队员背后的临时工之困](https://so.toutiao.com/search?keyword=保安队长性侵女队员背后的临时工之困)
-1. [相恋10年丈夫割一半肝给妻子](https://so.toutiao.com/search?keyword=相恋10年丈夫割一半肝给妻子)
-1. [首饰金价直逼740元每克](https://so.toutiao.com/search?keyword=首饰金价直逼740元每克)
+1. [电动车突然切线 大货车急到飙烟](https://so.toutiao.com/search?keyword=电动车突然切线+大货车急到飙烟)
+1. [伊朗媒体：要把特拉维夫夷为平地](https://so.toutiao.com/search?keyword=伊朗媒体：要把特拉维夫夷为平地)
+1. [四川死亡野生大熊猫为成年雌性](https://so.toutiao.com/search?keyword=四川死亡野生大熊猫为成年雌性)
+1. [洪秀柱：7月将率领近200名台青访陆](https://so.toutiao.com/search?keyword=洪秀柱：7月将率领近200名台青访陆)
+1. [孕妇忘记已怀孕9月习惯性翻了个身](https://so.toutiao.com/search?keyword=孕妇忘记已怀孕9月习惯性翻了个身)
+1. [《承欢记》全员独宠杨紫](https://so.toutiao.com/search?keyword=《承欢记》全员独宠杨紫)
+1. [官方回应街道办副主任被举报出轨](https://so.toutiao.com/search?keyword=官方回应街道办副主任被举报出轨)
 1. [“秦朗丢作业”系摆拍 博主被处罚](https://so.toutiao.com/search?keyword=“秦朗丢作业”系摆拍+博主被处罚)
 1. [“房闹”又来了](https://so.toutiao.com/search?keyword=“房闹”又来了)
-1. [女子母亲去世 舅舅吹唢呐送别](https://so.toutiao.com/search?keyword=女子母亲去世+舅舅吹唢呐送别)
+1. [岸田文雄声称今日乌克兰明日东亚](https://so.toutiao.com/search?keyword=岸田文雄声称今日乌克兰明日东亚)
 1. [网红猫一杯就编造捡作业事件道歉](https://so.toutiao.com/search?keyword=网红猫一杯就编造捡作业事件道歉)
-1. [四川死亡野生大熊猫为成年雌性](https://so.toutiao.com/search?keyword=四川死亡野生大熊猫为成年雌性)
-1. [试驾宝骏悦也Plus](https://so.toutiao.com/search?keyword=试驾宝骏悦也Plus)
-1. [监拍：男子电梯殴打女子被保安暴揍](https://so.toutiao.com/search?keyword=监拍：男子电梯殴打女子被保安暴揍)
-1. [解放军将迎头痛击“台独”分裂行径](https://so.toutiao.com/search?keyword=解放军将迎头痛击“台独”分裂行径)
-1. [伊朗对联合国开不惩罚以色列条件](https://so.toutiao.com/search?keyword=伊朗对联合国开不惩罚以色列条件)
-1. [因司机没有抢红灯 女子骂了一路](https://so.toutiao.com/search?keyword=因司机没有抢红灯+女子骂了一路)
-1. [洪秀柱谈马英九大陆行](https://so.toutiao.com/search?keyword=洪秀柱谈马英九大陆行)
-1. [男子被狗抓伤没打疫苗发病3天离世](https://so.toutiao.com/search?keyword=男子被狗抓伤没打疫苗发病3天离世)
-1. [保安队长涉嫌多次性侵66岁女队员](https://so.toutiao.com/search?keyword=保安队长涉嫌多次性侵66岁女队员)
+1. [女子母亲去世 舅舅吹唢呐送别](https://so.toutiao.com/search?keyword=女子母亲去世+舅舅吹唢呐送别)
+1. [相恋10年丈夫割一半肝给妻子](https://so.toutiao.com/search?keyword=相恋10年丈夫割一半肝给妻子)
 1. [专家揭秘黄金飙涨奥秘](https://so.toutiao.com/search?keyword=专家揭秘黄金飙涨奥秘)
+1. [越南女首富死刑背后的“烈火熔炉”](https://so.toutiao.com/search?keyword=越南女首富死刑背后的“烈火熔炉”)
+1. [男子被狗抓伤没打疫苗发病3天离世](https://so.toutiao.com/search?keyword=男子被狗抓伤没打疫苗发病3天离世)
+1. [被中方制裁的2家美军火公司啥来头](https://so.toutiao.com/search?keyword=被中方制裁的2家美军火公司啥来头)
+1. [猫一杯和“秦朗舅舅们”做错了什么](https://so.toutiao.com/search?keyword=猫一杯和“秦朗舅舅们”做错了什么)
+1. [重庆燃气：未发现已复核气表有失准](https://so.toutiao.com/search?keyword=重庆燃气：未发现已复核气表有失准)
+1. [伊朗对联合国开不惩罚以色列条件](https://so.toutiao.com/search?keyword=伊朗对联合国开不惩罚以色列条件)
+1. [雷军展示小米工厂天台](https://so.toutiao.com/search?keyword=雷军展示小米工厂天台)
+1. [男子被开除2天又返聘 工资低一万多](https://so.toutiao.com/search?keyword=男子被开除2天又返聘+工资低一万多)
+1. [粉丝表白许凯遭杨紫拆台](https://so.toutiao.com/search?keyword=粉丝表白许凯遭杨紫拆台)
+1. [车辆右后轮轮眉脱落随风摇摆像条蛇](https://so.toutiao.com/search?keyword=车辆右后轮轮眉脱落随风摇摆像条蛇)
+1. [保安队长性侵女队员背后的临时工之困](https://so.toutiao.com/search?keyword=保安队长性侵女队员背后的临时工之困)
+1. [第三个“国九条”会开启A股牛市吗](https://so.toutiao.com/search?keyword=第三个“国九条”会开启A股牛市吗)
+1. [专家：不能去主动发掘秦始皇帝陵](https://so.toutiao.com/search?keyword=专家：不能去主动发掘秦始皇帝陵)
+1. [以色列袭击约旦河西岸造成2人死亡](https://so.toutiao.com/search?keyword=以色列袭击约旦河西岸造成2人死亡)
+1. [因司机没有抢红灯 女子骂了一路](https://so.toutiao.com/search?keyword=因司机没有抢红灯+女子骂了一路)
+1. [解放军将迎头痛击“台独”分裂行径](https://so.toutiao.com/search?keyword=解放军将迎头痛击“台独”分裂行径)
+1. [演员关凌因辅导孩子作业进医院](https://so.toutiao.com/search?keyword=演员关凌因辅导孩子作业进医院)
+1. [杨紫扫楼怼脸生图](https://so.toutiao.com/search?keyword=杨紫扫楼怼脸生图)
+1. [淄博炒锅饼小哥爆火体重瘦到112斤](https://so.toutiao.com/search?keyword=淄博炒锅饼小哥爆火体重瘦到112斤)
+1. [韩国执政党国会选举惨败后有何影响](https://so.toutiao.com/search?keyword=韩国执政党国会选举惨败后有何影响)
+1. [黄子佼所持未成年影像涉及残忍虐行](https://so.toutiao.com/search?keyword=黄子佼所持未成年影像涉及残忍虐行)
+1. [故意杀人犯王俊帅被执行死刑](https://so.toutiao.com/search?keyword=故意杀人犯王俊帅被执行死刑)
+1. [英歌舞小女孩大方接受采访](https://so.toutiao.com/search?keyword=英歌舞小女孩大方接受采访)
+1. [春天里的民族文化“盛宴”](https://so.toutiao.com/search?keyword=春天里的民族文化“盛宴”)
+1. [首饰金价直逼740元每克](https://so.toutiao.com/search?keyword=首饰金价直逼740元每克)
+1. [试驾宝骏悦也Plus](https://so.toutiao.com/search?keyword=试驾宝骏悦也Plus)
+1. [保安队长涉嫌多次性侵66岁女队员](https://so.toutiao.com/search?keyword=保安队长涉嫌多次性侵66岁女队员)
 1. [菲律宾总统车队在白宫外遭抗议](https://so.toutiao.com/search?keyword=菲律宾总统车队在白宫外遭抗议)
 1. [U14国少15-2血洗日本大阪樱花梯队](https://so.toutiao.com/search?keyword=U14国少15-2血洗日本大阪樱花梯队)
 1. [T-90坦克的“红眼睛”有何作用](https://so.toutiao.com/search?keyword=T-90坦克的“红眼睛”有何作用)
 1. [王毅应约同美国务卿布林肯通电话](https://so.toutiao.com/search?keyword=王毅应约同美国务卿布林肯通电话)
-1. [第三个“国九条”会开启A股牛市吗](https://so.toutiao.com/search?keyword=第三个“国九条”会开启A股牛市吗)
 1. [巴黎奥组委主席回应塞纳河水质质疑](https://so.toutiao.com/search?keyword=巴黎奥组委主席回应塞纳河水质质疑)
 1. [女老师用手端学生下巴挑衅](https://so.toutiao.com/search?keyword=女老师用手端学生下巴挑衅)
 1. [华为P70系列详细参数和价格曝光](https://so.toutiao.com/search?keyword=华为P70系列详细参数和价格曝光)
-1. [黄子佼所持未成年影像涉及残忍虐行](https://so.toutiao.com/search?keyword=黄子佼所持未成年影像涉及残忍虐行)
 1. [原来《惜花芷》头饰这么细节](https://so.toutiao.com/search?keyword=原来《惜花芷》头饰这么细节)
-1. [杨紫扫楼怼脸生图](https://so.toutiao.com/search?keyword=杨紫扫楼怼脸生图)
-1. [专家：不能去主动发掘秦始皇帝陵](https://so.toutiao.com/search?keyword=专家：不能去主动发掘秦始皇帝陵)
 1. [上交所：拟新增三种规范类退市情形](https://so.toutiao.com/search?keyword=上交所：拟新增三种规范类退市情形)
 1. [南京北站造型被吐槽像卫生巾](https://so.toutiao.com/search?keyword=南京北站造型被吐槽像卫生巾)
 1. [奇瑞董事长评智界S7：Amazing](https://so.toutiao.com/search?keyword=奇瑞董事长评智界S7：Amazing)
@@ -57,7 +73,6 @@
 1. [赖岳谦谈中国大陆宣布制裁两家美企](https://so.toutiao.com/search?keyword=赖岳谦谈中国大陆宣布制裁两家美企)
 1. [国防部：绝不会任凭菲方无理取闹](https://so.toutiao.com/search?keyword=国防部：绝不会任凭菲方无理取闹)
 1. [中国B级轿车整体失守20万元价格线](https://so.toutiao.com/search?keyword=中国B级轿车整体失守20万元价格线)
-1. [演员关凌因辅导孩子作业进医院](https://so.toutiao.com/search?keyword=演员关凌因辅导孩子作业进医院)
 1. [为手机支架 雷军余承东隔空互嘲](https://so.toutiao.com/search?keyword=为手机支架+雷军余承东隔空互嘲)
 1. [谁拿到了朔尔茨访华团“登机牌”](https://so.toutiao.com/search?keyword=谁拿到了朔尔茨访华团“登机牌”)
 1. [智界S7充电5分钟续航增加215公里](https://so.toutiao.com/search?keyword=智界S7充电5分钟续航增加215公里)
@@ -142,7 +157,6 @@
 1. [官方辟谣西安骡马市打架致人死亡](https://so.toutiao.com/search?keyword=官方辟谣西安骡马市打架致人死亡)
 1. [瘫痪男子自学编织2年还清5万欠债](https://so.toutiao.com/search?keyword=瘫痪男子自学编织2年还清5万欠债)
 1. [专家解读美日同盟关系升级](https://so.toutiao.com/search?keyword=专家解读美日同盟关系升级)
-1. [男子被开除2天又返聘 工资低一万多](https://so.toutiao.com/search?keyword=男子被开除2天又返聘+工资低一万多)
 1. [今年养老金涨幅会进一步下降吗](https://so.toutiao.com/search?keyword=今年养老金涨幅会进一步下降吗)
 1. [激光炮解救被吊在电线上的夜鹭](https://so.toutiao.com/search?keyword=激光炮解救被吊在电线上的夜鹭)
 1. [台军前舰长：我想去看站起来的祖国](https://so.toutiao.com/search?keyword=台军前舰长：我想去看站起来的祖国)
